	-> browser : ouvrir automatiquement au bon endroit pour les photos, fiches, etc...
	-> browser : ne pas limiter la taille des fichiers uploadés
	-> changer le nom APL en VPN

	-> rechercher l'histoire du nom de domaine
	-> acheter le nouveau nom de domaine
	-> nouveau logo sur l'ancien site
	-> faire un lien "partager sur facebook"
	-> virer "a pas de loup" du site

@version 0.1.12 - @date
	site:
	. views/chantiers: fix calendar image
	. views/chantier: fix bug displaying [FINISHED]

@version 0.1.11 - @date 2014.03.22
	sql:
	. #__apl_chantiers: ajouter le champs adresse R#2014.03.12
	admin:
	. chantier: garder le champ "ou ?" pour une adresse "poétique", et ajouter un champ adresse exacte pour google R#2014.03.12
	. chantier: le champs adresse positionne le marker sur la carte, et non le champs "ou ?" R#2014.03.12
	. importv2chantiers: ne pas importer les fichiers attachés (fiche d'inscription, etc...) R#2014.03.12
	projet NetBeans
	. ajout de la licence Affero GPL
	js:
	. osm-leaflet.php: added function localiser() to localize a marker by pressing a button

@version 0.1.10 - @date 2014.03.17
	site:
	. chantiers: si la date du jour > date_fin ==> affiche le chantier comme [TERMINÉ] R#2014.03.12
	. chantier: si la date du jour > date_fin ==> affiche le chantier comme [TERMINÉ] R#2014.03.12
	. importv2chantiers: différencier les chantiers déjà importer des nouveaux R#2014.03.12
	. importv2articles: différencier les articles déjà importer des nouveaux R#2014.03.12
	languages:
	. fr-FR: ajout d'une description pour différencer date_debut de publish_up et date_fin de publish_down R#2014.03.12

@version 0.1.9 - @date 2014.03.12
	admin:
	. chantiers: colonnes sortables + ajout colonne date de début de chantier -> OK
	. chantier: intégration OpenStreetMap avec le layer leaflet
	. js/osm-leaflet.php: intégration de nominatim de OpenStreetMap pour le service de reverse-geocoding
	site:
	. intégration OpenStreetMap avec le layer leaflet
	=> chantiers -> OK