@@ -394,3 +394,4 @@ configuration.php
 index.php
 joomla.xml
 *.txt
+/newEmptyPHP.php
