@@ -1,4 +1,35 @@
 <?php
+/**
+ * @package		com_apl_j25
+ * @subpackage	js
+ * @brief		javascript library to provide custom helper functions
+ * @copyright	Copyright (C) 2010 - 2014 DEGENNES Charles-Antoine <cadegenn@gmail.com>
+ * @license		Affero GNU General Public License version 3 or later; see LICENSE.txt
+ * 
+ * @TODO		
+ */
+
+/** 
+ *  Copyright (C) 2012-2014 DEGENNES Charles-Antoine <cadegenn@gmail.com>
+ *  com_apl is a joomla! 2.5 component [http://www.apasdeloup.org]
+ *  
+ *  This file is part of com_apl.
+ * 
+ *     com_apl is free software: you can redistribute it and/or modify
+ *     it under the terms of the Affero GNU General Public License as published by
+ *     the Free Software Foundation, either version 3 of the License, or
+ *     (at your option) any later version.
+ * 
+ *     com_apl is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     Affero GNU General Public License for more details.
+ * 
+ *     You should have received a copy of the Affero GNU General Public License
+ *     along with com_apl.  If not, see <http://www.gnu.org/licenses/>.
+ * 
+ */
+
 abstract class APLFunctions {
 	
 	/**
@@ -91,6 +122,7 @@ abstract class APLFunctions {
 		$string = eregi_replace('&rsquo;',"'",$string);
 		$string = eregi_replace('&lsquo;',"'",$string);
 		$string = eregi_replace('&#039;',"'",$string);
+		$string = eregi_replace('Ê¼',"'",$string);
 		// on converti la chaine en UTF-8
 		//$string = mb_convert_encoding($string,'UTF-8');
 		// remplacer les <br /> et retranscrire en HTML
