@@ -1,10 +1,33 @@
 <?php
 /**
- * @brief		model to import 'chantiers' from old database (used by www.apasdeloup.org v2 website)
- * @author		DEGENNES Charles-Antoine <cadegenn@gmail.com>
- * @license		http://www.gnu.org/licenses/agpl-3.0.html GNU AGPL
+ * @package		com_apl_j25
+ * @subpackage	importv2chantiers
+ * @brief		MVC to import data from old database
+ * @copyright	Copyright (C) 2010 - 2014 DEGENNES Charles-Antoine <cadegenn@gmail.com>
+ * @license		Affero GNU General Public License version 3 or later; see LICENSE.txt
  * 
  * @TODO		create osm-leaflet server-side geocoding
+ */
+
+/** 
+ *  Copyright (C) 2012-2014 DEGENNES Charles-Antoine <cadegenn@gmail.com>
+ *  com_apl is a joomla! 2.5 component [http://www.apasdeloup.org]
+ *  
+ *  This file is part of com_apl.
+ * 
+ *     com_apl is free software: you can redistribute it and/or modify
+ *     it under the terms of the Affero GNU General Public License as published by
+ *     the Free Software Foundation, either version 3 of the License, or
+ *     (at your option) any later version.
+ * 
+ *     com_apl is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     Affero GNU General Public License for more details.
+ * 
+ *     You should have received a copy of the Affero GNU General Public License
+ *     along with com_apl.  If not, see <http://www.gnu.org/licenses/>.
+ * 
  */
 
 // No direct access to this file
