@@ -15,6 +15,8 @@
 	-> virer "a pas de loup" du site
 
 @version 0.1.12 - @date
+	admin:
+	. importv2chantiers: replace (MacOS ?) single quote char "Ê¼" by a real single quote "'"
 	site:
 	. views/chantiers: fix calendar image
 	. views/chantier: fix bug displaying [FINISHED]
